configurable regeneration rate